Status help text z-index fix.

--- a/jeugdzorg/jeugdzorg/static/css/screen.css
+++ b/jeugdzorg/jeugdzorg/static/css/screen.css
@@ -1834,7 +1834,7 @@ dl.contact-extended dt.contact-regeling ~ dd {
   color: #fff; }
 .well .contact-status {
   position: absolute;
-  z-index: 10;
+  z-index: 102;
   right: 3rem;
   top: 2.2rem; }
 @media (max-width: 900px) {
