--- a/jeugdzorg/jeugdzorg/static/scss/partials/_contact.scss
+++ b/jeugdzorg/jeugdzorg/static/scss/partials/_contact.scss
@@ -342,7 +342,7 @@ dl.contact-extended {
   
   .well & {
     position: absolute;
-    z-index: 10;
+    z-index: 102;
     right: $padding;
     top: 2.2rem;
     @include medium {
